src/objects/Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque__c</fullName>
        <label>Cheque#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Transferred__c</fullName>
        <label>Date Transferred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawn_on_Bank__c</fullName>
        <label>Drawn on Bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Account_Name__c</fullName>
        <label>Initiating Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Account_Number__c</fullName>
        <label>Initiating Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiating_Bank_Name__c</fullName>
        <label>Initiating Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_By__c</fullName>
        <label>Paid By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_By__c</fullName>
        <label>Received By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_Account_Name__c</fullName>
        <label>Receiving Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_Account_No__c</fullName>
        <label>Receiving Account No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Bank_Name__c</fullName>
        <label>Receiving Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWIFT_IFSC_Code__c</fullName>
        <label>SWIFT/IFSC Code</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Reference_Number__c</fullName>
        <label>Transaction Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>